Header gap fix test 1

--- a/css/header.css
+++ b/css/header.css
@@ -17,7 +17,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 0 20px;
 
     z-index: 1000;
 }
@@ -35,7 +35,9 @@ header a {
     align-items: center;
     justify-content: flex-start;
     flex-direction: row;
-    gap: 1em
+    gap: 1em;
+
+    background-color: brown;
 }
 
 header .title-holder {
@@ -161,7 +163,7 @@ header .title-holder .title-img-holder {
 
 #hamburger-dropdown a {
     width: 100%;
-    padding: 0.1em;
+    padding: 0.3em;
 }
 
 #hamburger-dropdown :nth-child(even) {
@@ -174,6 +176,8 @@ header .title-holder .title-img-holder {
     gap: 1em;
 
     height: 2em;
+
+    background-color: blue;
 }
 
 .header-right img {
@@ -189,7 +193,7 @@ header .title-holder .title-img-holder {
     gap: 0.3em;
     height: auto;
 
-    padding: 0.3em 0.5em;
+    /* padding: 0.3em 0.5em; */
     border-radius: var(--border-radius);
 
     /* Make it not selectable */
